--- a/src/content/activity-language.tex
+++ b/src/content/activity-language.tex
@@ -1,9 +1,8 @@
 %----------------------------------------------------------------------------
-\chapter{Activity nyelv}
+\chapter{Activity Language}
 %----------------------------------------------------------------------------
 
-% TODO
-
-\input{content/activity-language/sysml-as-input}
-\input{content/activity-language/language-and-metamodel}
-\input{content/activity-language/gamma-implementation}
+\input{content/activity-language/design-decisions}
+\input{content/activity-language/Metamodel}
+\input{content/activity-language/dsl}
+\input{content/activity-language/examples}
