--- a/src/content/activity-language/Metamodel.tex
+++ b/src/content/activity-language/Metamodel.tex
@@ -1,7 +1,6 @@
 %----------------------------------------------------------------------------
-\section{Related Work}
+\section{Metamodel}
 %----------------------------------------------------------------------------
 
 % TODO
 
-Itt is jó, de kicsit a bevezetőnél is beszélek róla. Talán ott jobb lenne.
