--- a/src/content/activity-language/design-decisions.tex
+++ b/src/content/activity-language/design-decisions.tex
@@ -1,7 +1,6 @@
 %----------------------------------------------------------------------------
-\section{Related Work}
+\section{Language Design}
 %----------------------------------------------------------------------------
 
 % TODO
 
-Itt is jó, de kicsit a bevezetőnél is beszélek róla. Talán ott jobb lenne.
