--- a/src/content/activity-language/examples.tex
+++ b/src/content/activity-language/examples.tex
@@ -1,7 +1,6 @@
 %----------------------------------------------------------------------------
-\section{Activity nyelv}
+\section{Examples}
 %----------------------------------------------------------------------------
 
 % TODO
 
-Nagy falat: a nyelv és metamodel leírása, tervezés és végeredmény indoklása. Példákkal.
