--- a/src/content/activity-model-verification.tex
+++ b/src/content/activity-model-verification.tex
@@ -1,8 +1,7 @@
 %----------------------------------------------------------------------------
-\chapter{Activity modell verifikáció}
+\chapter{Activity Model Verification}
 %----------------------------------------------------------------------------
 
-% TODO
-
+\input{content/activity-model-verification/state-model}
 \input{content/activity-model-verification/transformation}
-\input{content/activity-model-verification/gamma-implementation}
+\input{content/activity-model-verification/equivalence-with-petrinets}
