--- a/src/content/activity-model-verification/equivalence-with-petrinets.tex
+++ b/src/content/activity-model-verification/equivalence-with-petrinets.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\section{Gamma implementáció}
+\section{Equivalence with Petri Nets}
 %----------------------------------------------------------------------------
 
 % TODO
