--- a/src/content/activity-model-verification/transformation.tex
+++ b/src/content/activity-model-verification/transformation.tex
@@ -1,7 +1,6 @@
 %----------------------------------------------------------------------------
-\section{Transzformálás}
+\section{Transforming Individual Elements}
 %----------------------------------------------------------------------------
 
 % TODO
 
-XSTS transzformáció formális leírása, példák, diagrammok, viatra kód (esetleg)
