--- a/src/content/background.tex
+++ b/src/content/background.tex
@@ -1,8 +1,9 @@
 %----------------------------------------------------------------------------
-\chapter{Háttérismeretek}
+\chapter{Background}
 %----------------------------------------------------------------------------
 
 \input{content/background/model-verification}
 \input{content/background/modeling-formalisms}
 \input{content/background/gamma}
+\input{content/background/sysml-activity}
 \input{content/background/related-work}
