--- a/src/content/background/gamma.tex
+++ b/src/content/background/gamma.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\section{Gamma}
+\section{The Gamma Statechart Composition Framework}
 %----------------------------------------------------------------------------
 
 % TODO
