--- a/src/content/background/sysml-activity.tex
+++ b/src/content/background/sysml-activity.tex
@@ -4,4 +4,4 @@
 
 % TODO
 
-Itt annyit tervezek leírni, hogy a SysML 1 és 2 milyen szinten adott referenciát (nyelv és szemantika)
+SysML activity-jainak magas szintű leírása
