--- a/src/content/evaluation.tex
+++ b/src/content/evaluation.tex
@@ -1,4 +1,5 @@
 %----------------------------------------------------------------------------
-\chapter{Mérések}
+\chapter{Evaluation}
 %----------------------------------------------------------------------------
 
+% TODO
