--- a/src/content/future-work.tex
+++ b/src/content/future-work.tex
@@ -1,6 +1,5 @@
 %----------------------------------------------------------------------------
-\section{Gamma beli implementációk}
+\chapter{Conclusion and Future Work}
 %----------------------------------------------------------------------------
 
 % TODO
-
