--- a/src/content/activity-model-verification/state-model.tex
+++ b/src/content/activity-model-verification/state-model.tex
@@ -1,7 +1,6 @@
 %----------------------------------------------------------------------------
-\section{Related Work}
+\section{Activities as State-based Models}
 %----------------------------------------------------------------------------
 
 % TODO
 
-Itt is jó, de kicsit a bevezetőnél is beszélek róla. Talán ott jobb lenne.
