--- a/src/content/background/model-verification.tex
+++ b/src/content/background/model-verification.tex
@@ -1,7 +1,9 @@
 %----------------------------------------------------------------------------
-\section{Modell ellenőrzés}
+\section{Model Verification}
 %----------------------------------------------------------------------------
 
 % TODO
 
-Modell ellenőrzés fontossága, alapjai
+% model verificationt igazából nem nagyon mondunk, legyen inkább Formal Verification, Verification and Validation on Models, vagy Formal Methods
+
+Kell ez egyáltalán? A cél az lett volna, hogy leírja a fontosságát, de ezt a bevezetőben megteszem..
