--- a/src/content/background/modeling-formalisms.tex
+++ b/src/content/background/modeling-formalisms.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\section{Modellezési formalizmusok}
+\section{Modeling Formalisms}
 %----------------------------------------------------------------------------
 
 % TODO
