--- a/src/activity-gamma-tdk.tex
+++ b/src/activity-gamma-tdk.tex
@@ -29,6 +29,7 @@
 \input{include/thesis-en}
 
 \input{include/preamble}
+\input{include/commands}
 
 %--------------------------------------------------------------------------------------
 % Table of contents and the main text
@@ -65,6 +66,7 @@
 \include{content/implementation}
 \include{content/evaluation}
 \include{content/future-work}
+\include{content/acknowledgement}
 
 
 % List of Figures, Tables
