--- a/src/content/activity-language/examples.tex
+++ b/src/content/activity-language/examples.tex
@@ -1,6 +1,10 @@
 %----------------------------------------------------------------------------
-\section{Examples}
+\clearpage\section{Examples}
 %----------------------------------------------------------------------------
 
-% TODO
+\subsection{Adder Example}
 
+The following is a basic example of an adder activity.
+It 'reads' two numbers, adds them, and then 'logs' the result.
+
+\lstinputlisting{code/language/add-example.gcd}
