--- a/src/content/background/modeling-formalisms.tex
+++ b/src/content/background/modeling-formalisms.tex
@@ -2,6 +2,15 @@
 \section{Modeling Formalisms}
 %----------------------------------------------------------------------------
 
-% TODO
+\subsection{Extended symbolic transition system}
 
-Mondok Milán Bsc 2.2-höz hasonlóan: modellezési formalizmusok, activity formális leírása, petri net, tranzíciós rendszerek, stb
+XSTS
+
+\subsection{Activities}
+
+SysML és általános activity leírás
+
+\subsection{Petri nets}
+
+Petri hálók leírása
+
