--- a/src/content/introduction.tex
+++ b/src/content/introduction.tex
@@ -8,6 +8,6 @@ Formal model verification is a technique (among many) for detecting such errors.
 
 Gamma is one of such frameworks. Right now Gamma only supports composite systems of only statecharts, however, real world models use activity diagrams heavily. For this reason, I propose to add an activity language to Gamma, and with it enable the systematic verification of a larger subset of SysML models.
 
-TODO valahol még le kéne írni, hogy milyen létező megoldások vannak (Beni, egyéb?)
+TODO létező megoldások keresése és leírása (Beni pl)
 
 TODO dolgozat felépítése
