--- a/src/content/activity-language/design-decisions.tex
+++ b/src/content/activity-language/design-decisions.tex
@@ -1,6 +1,10 @@
 %----------------------------------------------------------------------------
-\section{Language Design}
+\clearpage\section{Language Design}
 %----------------------------------------------------------------------------
 
-% TODO
+Language design usually determines the domain and usability of the end result. For this reason, I knew from the beginning, how important it is to lay down the priorities of the language.
 
+The aim of the language is to sit in the middle of the SysML and XSTS semantics -- provide a \emph{bridge} in between the two .
+To achieve that, first, it needs to be \textbf{semantically correct} -- at least according to our \emph{activity semantics} -- to lift the burden of filtering out incorrect models. Secondly, it needs to be easily transformed to XSTS and from SysML.
+
+The latter can be done by having a metamodel close to SysML, and the former by minimising the complexity of the language. Needless to say, this is not an easy thing to do, and requires an incremental design process.
