--- a/src/activity-gamma-tdk.tex
+++ b/src/activity-gamma-tdk.tex
@@ -11,14 +11,14 @@
 \newcommand{\vikkonzulensAKeresztnev}{Vince}
 
 \newcommand{\vikkonzulensBMegszolitas}{}
-\newcommand{\vikkonzulensBVezeteknev}{}
-\newcommand{\vikkonzulensBKeresztnev}{}
+\newcommand{\vikkonzulensBVezeteknev}{Graics}
+\newcommand{\vikkonzulensBKeresztnev}{Bence}
 
 \newcommand{\vikkonzulensCMegszolitas}{}
 \newcommand{\vikkonzulensCVezeteknev}{}
 \newcommand{\vikkonzulensCKeresztnev}{}
 
-\newcommand{\vikcim}{Formal Verification of Activity Diagrams Using the Gamma Framework}
+\newcommand{\vikcim}{Formal modeling and verification of process models in component-based reactive systems}
 \newcommand{\viktanszek}{\bmemit}
 \newcommand{\vikdoktipus}{\bsc}
 \newcommand{\vikmunkatipusat}{önálló labort}
