--- a/src/content/activity-language.tex
+++ b/src/content/activity-language.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\chapter{Activity Language}
+\chapter{Gamma Activity Language}
 %----------------------------------------------------------------------------
 
 \input{content/activity-language/design-decisions}
