--- a/src/content/activity-language/Metamodel.tex
+++ b/src/content/activity-language/Metamodel.tex
@@ -1,12 +1,16 @@
 %----------------------------------------------------------------------------
-\clearpage\section{Metamodel}
+\clearpage\section{Formal modelling}
 %----------------------------------------------------------------------------
 
 The metamodel of the language was constructed to facilitate well defined semantics, but have as few model elements as possible.
 
 \subsection{Semantic part}
 
-This part provides elements needed to construct a semantically correct model. An Activity model has \textbf{Nodes} and \textbf{Flows} in between nodes. Flows can be connected to nodes directly, or to \textbf{Pins}, which gives us explicit control over \emph{control} flows and \emph{data} flows. See figure \ref{fig:TeXstudio}
+kövér helyett texttt vagy textsc. Tök jó lenne, ha lennének példák a metamodel használatára, pl egy activity diagram - metamodel pár, ahol a kettő között húzódnának traceability csíkok
+
+This part provides elements needed to construct a semantically correct model. An Activity model has \textbf{Nodes} and \textsc{Flows} in between nodes. Flows can be connected to nodes directly, or to \texttt{Pins}, which gives us explicit control over \emph{control} flows and \emph{data} flows. See figure \ref{fig:TeXstudio}
+
+fekete-fehér, kevés szín
 
 \begin{figure}[!ht]
 	\centering
