--- a/src/content/activity-language/dsl.tex
+++ b/src/content/activity-language/dsl.tex
@@ -2,6 +2,8 @@
 \clearpage\section{Domain-specific Language}
 %----------------------------------------------------------------------------
 
+ide még jöhet később xtext kód
+
 In order to make it easier to test both the XSTS and SysML transformations, I created an \textbf{Xtext} domain-specific language. Easy readability and writing was not one of the main priorities, because the end goal is to have a higher-level systems modelling language as a source. As a result, many many constructs are inherently repetitive to write.
 
 \subsection{Language elements}
