--- a/src/content/activity-language/examples.tex
+++ b/src/content/activity-language/examples.tex
@@ -7,4 +7,8 @@
 The following is a basic example of an adder activity.
 It 'reads' two numbers, adds them, and then 'logs' the result.
 
+diagram, opaque action
+
+Ehelyett egyébként lehetne a running example, amit még az egész elején definiálunk
+
 \lstinputlisting{code/language/add-example.gcd}
