--- a/src/content/background/gamma.tex
+++ b/src/content/background/gamma.tex
@@ -6,11 +6,8 @@ The Gamma Statechart Composition Framework is a tool created to support platform
 
 % TODO: replace with better image
 
-\begin{figure}[!ht]
-	\centering
-	\includesvg[inkscapelatex=false, width=100mm, keepaspectratio]{gamma-pipeline}
-	\caption{Using Gamma to verify high-level models}
-	\label{fig:gamma-pipeline}
-\end{figure}
+részletesebben, komponensek felírása, mert később még bele fogunk nyúlni
 
-Figure \ref{fig:gamma-pipeline} shows an abstract representation of how a \emph{high-level} SysML model could be verified using Gamma as a \emph{middle man}. Important aspect of the transformations is to have back annotations, which provide the user with the information of \emph{which} source model element the verifier returned.
+\subsection{Statechart}
+
+\subsection{Activity}
