--- a/src/content/background/model-verification.tex
+++ b/src/content/background/model-verification.tex
@@ -1,9 +1,23 @@
 %----------------------------------------------------------------------------
-\section{Model Verification}
+\section{Formal Verification}\label{sec:formal_verification}
 %----------------------------------------------------------------------------
 
-% TODO
+model checkinges ábra: model, property -> ok vagy ellenpélda. Klasszik leírása, hogy felhasnálói oldalról hogy néz ki a folyamat. Nem kell konkretizálni
 
-% model verificationt igazából nem nagyon mondunk, legyen inkább Formal Verification, Verification and Validation on Models, vagy Formal Methods
 
-Kell ez egyáltalán? A cél az lett volna, hogy leírja a fontosságát, de ezt a bevezetőben megteszem..
+\subsection{verifikáció (kéne név)}
+
+xsts egy állapot-alapú modell
+
+vannak változók (állapotok) és tranzíciók (env, tran, init).
+
+A különböző tranzíciók különböző működést valósítanak meg, assert, parallel, sequence, choice, stb. Erről akár egy táblázat, akár subsubsectionök
+
+
+\subsection{Extended symbolic transition system}
+
+xsts egy állapot-alapú modell
+
+vannak változók (állapotok) és tranzíciók (env, tran, init).
+
+A különböző tranzíciók különböző működést valósítanak meg, assert, parallel, sequence, choice, stb. Erről akár egy táblázat, akár subsubsectionök
