--- a/src/content/future-work.tex
+++ b/src/content/future-work.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\chapter{Conclusion and Future Work}
+\chapter{Conclusion}
 %----------------------------------------------------------------------------
 
 % TODO
