--- a/src/bib/mybib.bib
+++ b/src/bib/mybib.bib
@@ -21,3 +21,16 @@
 	doi = {10.1145/3183440.3183489}
 }
 
+@article{HAREL1987231,
+title = {Statecharts: a visual formalism for complex systems},
+journal = {Science of Computer Programming},
+volume = {8},
+number = {3},
+pages = {231-274},
+year = {1987},
+issn = {0167-6423},
+doi = {https://doi.org/10.1016/0167-6423(87)90035-9},
+url = {https://www.sciencedirect.com/science/article/pii/0167642387900359},
+author = {David Harel},
+abstract = {We present a broad extension of the conventional formalism of state machines and state diagrams, that is relevant to the specification and design of complex discrete-event systems, such as multi-computer real-time systems, communication protocols and digital control units. Our diagrams, which we call statecharts, extend conventional state-transition diagrams with essentially three elements, dealing, respectively, with the notions of hierarchy, concurrency and communication. These transform the language of state diagrams into a highly structured and economical description language. Statecharts are thus compact and expressive—small diagrams can express complex behavior—as well as compositional and modular. When coupled with the capabilities of computerized graphics, statecharts enable viewing the description at different levels of detail, and make even very large specifications manageable and comprehensible. In fact, we intend to demonstrate here that statecharts counter many of the objections raised against conventional state diagrams, and thus appear to render specification by diagrams an attractive and plausible approach. Statecharts can be used either as a stand-alone behavioral description or as part of a more general design methodology that deals also with the system's other aspects, such as functional decomposition and data-flow specification. We also discuss some practical experience that was gained over the last three years in applying the statechart formalism to the specification of a particularly complex system.}
+}
