--- a/src/content/background.tex
+++ b/src/content/background.tex
@@ -1,8 +1,9 @@
 %----------------------------------------------------------------------------
-\chapter{Background}
+\chapter{Background}\label{ch:background}
 %----------------------------------------------------------------------------
 
-\input{content/background/model-verification}
+In this chapter I address the foundations of this work. In \autoref{sec:formalisms} I introduce the theoretical bases of behaviour modeling, which is used widely in systems engineering, and their implementation in an existing language - SysML. After this I talk about Formal Verification in \autoref{sec:formal_verification}, which is a mathematically rigorous method for finding specific configurations of modelled systems. Lastly, I introduce the Gamma Composite Statechart Framework, which is a tool for stating and verifying composite models using statechart behaviours.
+
 \input{content/background/modeling-formalisms}
+\input{content/background/model-verification}
 \input{content/background/gamma}
-\input{content/background/related-work}
