--- a/src/content/background/modeling-formalisms.tex
+++ b/src/content/background/modeling-formalisms.tex
@@ -1,16 +1,43 @@
 %----------------------------------------------------------------------------
-\section{Modeling Formalisms}
+\section{Modeling Formalisms}\label{sec:formalisms}
 %----------------------------------------------------------------------------
 
-\subsection{Extended symbolic transition system}
+\subsection{Behaviour Formalisms}
 
-XSTS
+\subsubsection{State-based}
 
-\subsection{Activities}
+ábra egy állapot alapú modellről
 
-SysML és általános activity leírás
+állapot alapú modellek állapotokra vannak osztva, melyek között átmenetek vannak
 
-\subsection{Petri nets}
+ezek az átmenetek rendelkeznek triggerrel, guarddal és action-nel
 
-Petri hálók leírása
+egy állapot lehet aktív régionként, és több régió is lehet
 
+ezekről mind 1-1 ábra, ahogy váltanak a tranzíciók
+
+\subsubsection{Process-oriented}
+
+ábra egy folyamat-oriontált modellről
+
+process csomópontok és csatlakozások vannak
+
+ezeken tokenek futnak végig
+
+adott csomópont akkor futhat, ha elég token juthat be a bemeneti csatlakozásokon
+
+miután végzett a folyamat, 1-1 tokent ad ki a kimeneti csatlakozásokon
+
+ezekről mind 1-1 ábra, ahogy haladnak a tokenek, stb
+
+\subsubsection{Differences}
+
+alapvető különbségek leírása, működés és használatban főleg
+
+\subsection{SysML}
+
+\subsubsection{Statechart}
+
+\subsubsection{Activity}
+
+\subsubsection{Combining Behaviours}
