--- a/src/content/introduction.tex
+++ b/src/content/introduction.tex
@@ -2,12 +2,12 @@
 \chapter{\bevezetes}
 %----------------------------------------------------------------------------
 
-Model-Based Systems Engineering is a widely used technique for designing, testing and executing otherwise too complicated systems in a well defined, \emph{high-level} language (e.g. SysML). Such systems usually come from critical domains (e.g. transportation, flight) which have a very low tolerance for errors. As such, early detection of otherwise deadly mistakes is mandatory.
+The complexity of safety-critical systems has been increasing rapidly in recent years. To mitigate said complexity, the model-based paradigm has become the decisive way to design such systems. In model-based systems engineering, we usually define the behaviour of system components using state-based or process-oriented models. The former formalism describes what states the component can be in, while the latter describes what steps it can perform and in what order. Oftentimes, the best way to model the behaviour of a complex component is to combine these models in some way. 
 
-Formal model verification is a technique (among many) for detecting such errors. They use formal proving algorithms to check whether a given system property (usually an undesired state) is \emph{reachable} and how to reach that state. However, these proving methods require low-level, \emph{state based mathematical models}, which are far from the high-level languages we are used to. In order to verify such models, we need to \emph{bridge} the gap between the two worlds.
+Modelling languages with formal semantics enable the (exhaustive) verification of the described behaviour. Formal verification may be used to detect errors early during development by checking if a given (erroneous) state of the system can be reached, and if so, providing a way to reach it. Formal verification tools often require low-level state-based mathematical models, which are far from human-understandable languages. Thus, to enable the verification of high-level behavioural models, a model transformation must be implemented that preserves the semantics of both process-oriented and state-based models, even when combined.  
 
-Gamma is one of such frameworks. Right now Gamma only supports composite systems of only statecharts, however, real world models use activity diagrams heavily. For this reason, I propose to add an activity language to Gamma, and with it enable the systematic verification of a larger subset of SysML models.
+Gamma Statechart Composition Framework is a tool for bridging the gap between the two models. It is a tool for modelling and verifying component-based reactive systems based on statecharts. Since Gamma does not support activities yet, I introduce a new activity language inspired by SysMLv2, and implement the necessary transformations to Gamma’s low-level analysis formalism.
 
-TODO létező megoldások keresése és leírása (Beni pl)
+ezt még át kéne írni
 
-TODO dolgozat felépítése
+kicsit beszélni a létező implementációkró
