--- a/src/content/activity-language/Metamodel.tex
+++ b/src/content/activity-language/Metamodel.tex
@@ -8,7 +8,7 @@ The metamodel of the language was constructed to facilitate well defined semanti
 
 kövér helyett texttt vagy textsc. Tök jó lenne, ha lennének példák a metamodel használatára, pl egy activity diagram - metamodel pár, ahol a kettő között húzódnának traceability csíkok
 
-This part provides elements needed to construct a semantically correct model. An Activity model has \textbf{Nodes} and \textsc{Flows} in between nodes. Flows can be connected to nodes directly, or to \texttt{Pins}, which gives us explicit control over \emph{control} flows and \emph{data} flows. See figure \ref{fig:TeXstudio}
+This part provides elements needed to construct a semantically correct model. An Activity model has \textbf{Nodes} and \textsc{Flows} in between nodes. Flows can be connected to nodes directly, or to \texttt{Pins}, which gives us explicit control over \emph{control} flows and \emph{data} flows. 
 
 fekete-fehér, kevés szín
 
