--- a/src/content/activity-language/design-decisions.tex
+++ b/src/content/activity-language/design-decisions.tex
@@ -2,7 +2,7 @@
 \section{Language Design}
 %----------------------------------------------------------------------------
 
-Language design usually determines the domain and usability of the end result. For this reason, I knew from the beginning, how important it is to lay down the priorities of the language.
+The Gamma Activity Language aims at providing a medium in which one can describe Activities like in SysML, but also be semantically consistent.
 
 The aim of the language is to sit in the middle of the SysML and XSTS semantics -- provide a \emph{bridge} in between the two .
 To achieve that, first, it needs to be \textbf{semantically correct} -- at least according to our \emph{activity semantics} -- to lift the burden of filtering out incorrect models. Secondly, it needs to be easily transformed to XSTS and from SysML.
