Introduced xsts and formal verification

--- a/src/content/background.tex
+++ b/src/content/background.tex
@@ -7,4 +7,5 @@ In this chapter I address the foundations of this work. In \autoref{sec:formalis
 \input{content/background/behaviour-models}
 \input{content/background/sysml}
 \input{content/background/model-verification}
+\input{content/background/xsts}
 \input{content/background/gamma}
