--- a/src/content/background/behaviour-models.tex
+++ b/src/content/background/behaviour-models.tex
@@ -28,7 +28,7 @@ The formal definition of \emph{deterministic} finite state machines is as follow
 	\end{itemize}
 \end{definition}
 
-The current state of a DFSM is \(s \in S\). A transition from state to state is performed, given the last input letter \(l\), if and only if \( s' = \delta(s, l) \in S \). In which case the current state will become \(s'\) (this work assumes, that if the given \(\delta(s, l)\) is not defined, then the state machine remains in it's current state)).
+The current state of a DFSM is \(s \in S\). A transition from state to state is performed, given the last input letter \(l\), if and only if \( s' = \delta(s, l) \in S \). In which case the current state will become \(s'\) (this work assumes, that if the given \(\delta(s, l)\) is not defined, then the state machine remains in it's current state).
 
 \subsection{Petri Net}
 
